# deferred-engine

./: .gitignore  CMakeLists.txt  README.md  copyassets.sh
cmake/: FindGLEW.cmake  FindGLSLOptimizer.cmake  Info.plist
resources/: alpha.dds  background.dds  background_ddn.dds  basic.frag  chain_texture.dds  chain_texture_ddn.dds  chain_texture_mask.dds  color.frag  default.dds  directionlight.frag  gi_flag.dds  img.dds  lion.dds  lion2_ddn.dds  lion_ddn.dds  planet.dds  pointshader.frag  skybox.vert  spec.dds  spnza_bricks_a_ddn.dds  spnza_bricks_a_diff.dds  spnza_bricks_a_spec.dds  sponza.mtl  sponza_arch_ddn.dds  sponza_arch_diff.dds  sponza_arch_spec.dds  sponza_ceiling_a_diff.dds  sponza_ceiling_a_spec copy.dds  sponza_column_a_ddn.dds  sponza_column_a_diff.dds  sponza_column_a_spec.dds  sponza_column_b_ddn.dds  sponza_column_b_diff.dds  sponza_column_b_spec.dds  sponza_column_c_ddn.dds  sponza_column_c_diff.dds  sponza_column_c_spec.dds  sponza_curtain_blue_diff.dds  sponza_curtain_diff.dds  sponza_curtain_green_diff.dds  (+24 more)
resources/shaders/: ambientlight.frag.glsl  basic.frag  basic.frag.glsl  basic.vert  basic.vert.glsl  bloom.frag.glsl  color.frag.glsl  color.vert  debug.frag.glsl  debug.vert  directionlight.frag.glsl  fog.frag.glsl  fullscreen.frag  (+9 more)
src/: aabb.cpp  aabb.h  camera.cpp  camera.h  common.h  debug_draw.cpp  debug_draw.h  entity.cpp  entity.h  error.cpp  error.h  file_io.cpp  file_io.h  frame_buffer.cpp  frame_buffer.h  framebuffer.cpp  framebuffer.h  frustum.cpp  frustum.h  game.cpp  game.h  gbuffer.cpp  gbuffer.h  light.cpp  light.h  loader.cpp  loader.h  main.cpp  mesh.h  plane.h  primitives.cpp  primitives.h  profiler.cpp  profiler.h  renderer.cpp  renderer.h  scene.cpp  scene.h  shader.cpp  shader.h  (+6 more)
